# Chattum

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  run_tests.sh
backend/: __init__.py  api.py  app.py  database.py  dockerfile  logger.py  pydantic_models.py  pyproject.toml  pytest.ini  test.py
backend/app/: __init__.py  app.py  chroma.py  database.py  file_storage.py  logger.py  router.py  security.py
backend/app/chat/: chat_engine.py
backend/app/chat/models/: __init__.py  base_model.py  huggingface_hub.py  openai.py  together.py
backend/app/chat/prompts/: templates.py
backend/app/chat/prompts/templates/: react_json.py
backend/app/chat/tools/: __init__.py  base_tool.py  document_search.py  finance_tools.py  requests_tools.py  sms_tools.py
backend/app/chat/workflows/: classification.py  extraction.py
backend/app/routers/: bots.py  chat.py  conversations.py  documents.py  prompts.py  sources.py
backend/app/routes/: __init__.py  bots.py  chat.py  conversations.py  docs.py  model.py  prompts.py  sources.py  tools.py  workflows.py
backend/bots/: __init__.py  bot_management.py
backend/bots/conversations/: conversation_management.py
backend/bots/prompts/: prompt_management.py
backend/pydantic_models/: __init__.py  bots.py  conversations.py  inputs.py  models.py  responses.py  sources.py  tools.py  workflows.py
backend/tests/: conftest.py  test_bots.py  test_chat.py  test_conversations.py  test_health_check.py  test_prompts.py  test_sources.py  test_tools.py
backend/tests/files/: sample_url.txt
backend/utils/: scraping.py
frontend/: Dockerfile  backend_controller.py  bots.py  config.yaml  constants.py  main.py  pyproject.toml  requirements.txt  🤖_bots.py
frontend/.streamlit/: config.toml
frontend/components/: __init__.py  authentication.py  bot_menu.py  bots_grid.py  conversations.py  delete_modal.py  models.py  sidebar.py  sidebar_controller.py  sidebar_cotroller.py  sources_grid.py  tools.py  workflows.py
frontend/components/tools/: __init__.py  request.py
frontend/pages/: 10_📝_instructions.py  11_🔮_predict.py  1_📝_prompt.py  2_📑_sources.py  3_🛠️_tools.py  4_🗣️_chat.py  5_💬_conversations.py  6_🔄_API.py  7_⚙️_settings.py  8_🔬_calibration.py  9_⚖_evaluation.py  api.py  chat.py  conversations.py  prompt.py  settings.py  sources.py  tools.py
frontend/st_pages/: __init__.py  api.py  chat.py  conversations.py  prompt.py  settings.py  sources.py  tools.py
frontend/utils/: __init__.py  page_config.py  query_params.py
frontend_flet/: Dockerfile  backend_controller.py  constants.py  main.py  pyproject.toml  requirements.txt  simple_toast.py
notebooks/: tools.ipynb
ui/: Dockerfile  pyproject.toml  rxconfig.py  settings.py
ui/chattum_ui/: chattum_ui.py  styles.py
ui/chattum_ui/components/: bots.py  conversations.py  sidebar.py  sources.py  tools.py
ui/chattum_ui/pages/: __init__.py  api_page.py  bots.py  chat.py  conversations.py  prompt.py  settings.py  sources.py  tools.py
ui/chattum_ui/state/: __init__.py  chat.py  conversation.py  sources.py  state.py  tools.py
ui/chattum_ui/templates/: template.py
ui/chattum_ui/utils/: backend_controller.py
(+21 files in other folders)
