[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.95.2"
uvicorn = "^0.17.5"
json-logging = "^1.3.0"
requests = "^2.27.1"
pytest = "^7.0.1"
pydantic-mongo = "^1.0.1"
langchain = "^0.0.194"
pymongo-inmemory = "^0.2.13"
anyio = "^3.7.0"
httpx = "^0.24.1"
python-multipart = "^0.0.6"
minio = "^7.1.15"
boto3 = "^1.28.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
