[tool.poetry]
name = "frontend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.33.0"
requests = "^2.28.2"
requests-toolbelt = "^0.10.1"
newspaper3k = "^0.2.8"
streamlit-chat = "^0.0.2.2"
langchain = "^0.0.196"
bson = "^0.5.10"
streamlit-extras = "^0.2.7"
streamlit-option-menu = "^0.3.6"
streamlit-modal = "^0.1.0"
streamlit-ace = "^0.1.1"
validators = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
